Client: Miscellaneous code quality improvements suggested by IntelliJ
- Unused static fields that are never set are removed
- Deobfuscated unused methods and constructors are removed
- Deobfuscated empty methods are removed
- Unused local variables are removed
- Identical catch clauses are combined
- For loops are converted into for-each loops
- Redundant variables are inlined
- Unused method parameters are removed
- The unused FileUtil class is removed
- The Stub inner class in Game is converted to static
- Redundant throws clauses are removed
- Large if-elses are converted to switch statements
- Unnecessary multiplications by 1.0D to cast to double are removed